--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -1,10 +1,10 @@
-.app_skills {
+.app__skills {
   flex: 1;
   width: 100%;
   flex-direction: column;
 }
 
-.app_skills-container {
+.app__skills-container {
   width: 80%;
   margin-top: 3rem;
 
@@ -17,7 +17,7 @@
   }
 }
 
-.app_skills-list {
+.app__skills-list {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
@@ -33,7 +33,7 @@
   }
 }
 
-.app_skills-item {
+.app__skills-item {
   flex-direction: column;
   text-align: center;
 
@@ -80,7 +80,7 @@ p {
   }
 }
 
-.app_skills-exp {
+.app__skills-exp {
   flex: 1;
   display: flex;
   justify-content: flex-start;
@@ -92,7 +92,7 @@ p {
   }
 }
 
-.app_skills-exp-item {
+.app__skills-exp-item {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -101,7 +101,7 @@ p {
   margin: 1rem 0;
 }
 
-.app_skills-exp-works {
+.app__skills-exp-works {
   flex: 1;
 
   .app_skills-exp-work{
@@ -124,7 +124,7 @@ p {
   }
 }
 
-.app_skills-exp-year {
+.app__skills-exp-year {
   margin-right: 3rem;
 
   p {
