fix: styles for s devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -119,6 +119,12 @@
 
     transition: all 0.3s ease-in-out;
 
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     svg {
       width: 15px;
       height: 15px;
